# alphaxiv-open

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.frontend  Dockerfile.lightrag  RAILWAY.md  README.md  docker-compose.yml  index_paper.py  pyproject.toml  railway.toml  requirements.txt  run-rag.bat  run-server.bat  run.py  set_document_id.py  setup.bat  setup.sh  start_minirag.py  test_api.py
app/: main.py
app/models/: schemas.py
app/services/: arxiv_service.py  gemini_service.py  indexing_service.py  markdown_service.py
frontend/: README.md  next.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json  run-frontend.bat
frontend/public/: pdf-worker.html
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/proxy/pdf/: route.ts
frontend/src/app/papers/[id]/: page.tsx
frontend/src/components/chat/: ChatPanel.tsx  ContextSection.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/components/paper/: PaperProcessor.tsx  PaperViewer.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
